[tool.poetry]
name = "starlette-graphene3"
version = "0.2.2"
description = "Use Graphene v3 on Starlette"
authors = ["Taku Fukada <naninunenor@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ciscorn/starlette-graphene3"
repository = "https://github.com/ciscorn/starlette-graphene3"
keywords = ["graphene", "graphql", "asgi", "starlette"]
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = "^3.7"
graphene = ">=3.0b6"
starlette = "^0.14.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
graphene-file-upload = "^1.2.2"
mypy = "^0.790"
pre-commit = "^2.8.2"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
python-multipart = "^0.0.5"
uvicorn = "^0.12.2"
requests = "^2.25.0"
pytest-asyncio = "^0.14.0"

[tool.isort]
include_trailing_comma = true
line_length=88
multi_line_output=3
known_third_party = ["graphene", "graphene_file_upload", "graphql", "pytest", "starlette"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
