[tool.poetry]
name = "starlette-graphene3"
version = "0.6.0"
description = "Use Graphene v3 on Starlette"
authors = ["Taku Fukada <naninunenor@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ciscorn/starlette-graphene3"
repository = "https://github.com/ciscorn/starlette-graphene3"
keywords = ["graphene", "graphql", "asgi", "starlette"]
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = "^3.7"
graphene = ">=3.0b6"
graphql-core = ">=3.1,<3.3"
starlette = ">=0.14.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
graphene-file-upload = "^1.3.0"
mypy = "^0.910"
pre-commit = "^2.13.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
python-multipart = "^0.0.5"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
requests = "^2.25.1"
pytest-asyncio = "^0.15.1"

[tool.isort]
include_trailing_comma = true
line_length=88
multi_line_output=3
known_third_party = ["graphene", "graphene_file_upload", "graphql", "pytest", "starlette"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
