[tool.poetry]
name = "starlette-graphene3"
version = "0.6.1"
description = "Use Graphene v3 on Starlette"
authors = ["Taku Fukada <naninunenor@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ciscorn/starlette-graphene3"
repository = "https://github.com/ciscorn/starlette-graphene3"
packages = [{ include = "starlette_graphene3.py",  from = "src" }]
keywords = ["graphene", "graphql", "asgi", "starlette"]
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
graphene = ">=3.0b6"
graphql-core = ">=3.1,<3.3"
starlette = ">=0.14.1"

[tool.poetry.group.dev.dependencies]
graphene-file-upload = "^1.3.0"
mypy = "^1.1.1"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
python-multipart = "^0.0.6"
uvicorn = {extras = ["standard"], version = ">=0.21,<0.24"}
requests = "^2.28.2"
pytest-asyncio = ">=0.20.3,<0.22.0"
flake8 = "^6.0.0"
black = "^23.1.0"
httpx = ">=0.23.3,<0.25.0"
flake8-bugbear = "^23.3.12"
flake8-pyproject = "^1.2.2"

[tool.isort]
profile = "black"
known_third_party = ["graphene", "graphene_file_upload", "graphql", "pytest", "starlette"]

[tool.flake8]
exclude = ".venv"
extend-select = "B950"
extend-ignore = "E203,E501,B008"
max-line-length = 88

[tool.pyright]
executionEnvironments = [{ root = "tests", extraPaths = ["src"] }]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
source = ["starlette_graphene3"]
